// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ManageOrgs > should render correctly when there are no inputs 1`] = `
<DocumentFragment>
  <div
    class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and 
        <a
          class="govuk-link"
          href="/feedback"
          id="feedback-link"
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/sysadmin/org"
            method="post"
          >
            <input
              name="csrf_token"
              type="hidden"
              value=""
            />
            <h1
              class="govuk-heading-xl"
            >
              Add new organisation
            </h1>
            <div
              class="govuk-form-group"
            >
              <div
                class="govuk-form-group"
                id="name"
              >
                <label
                  class="govuk-label govuk-label--s"
                  for="name-input"
                >
                  Organisation name
                </label>
                <div
                  class=""
                >
                  <input
                    class="govuk-input w border-3"
                    id="name-input"
                    maxlength="100"
                    name="name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-form-group"
            >
              <div
                class="govuk-form-group"
              >
                <label
                  class="govuk-label govuk-label--s"
                  for="adminAreaCodes-input"
                  id="adminAreaCodes-label"
                >
                  NaPTAN AdminArea
                </label>
                <div
                  class=""
                >
                  <div
                    class="text-lg text-black css-b62m3t-container"
                    id="adminAreaCodes"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-dropdown-adminAreaCodes-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      class=" css-178nxlf-control"
                    >
                      <div
                        class=" css-art2ul-ValueContainer2"
                      >
                        <div
                          class=" css-yl2wa5-placeholder"
                          id="react-select-dropdown-adminAreaCodes-placeholder"
                        >
                          Select code
                        </div>
                        <div
                          class=" css-w9q2zk-Input2"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-describedby="react-select-dropdown-adminAreaCodes-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-labelledby="adminAreaCodes-label"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id="adminAreaCodes-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" css-4xgw5l-IndicatorsContainer2"
                      >
                        <span
                          class=" css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <table
                  class="govuk-table"
                >
                  <thead
                    class="govuk-table__head"
                  >
                    <tr
                      class="govuk-table__row"
                    />
                  </thead>
                  <tbody
                    class="govuk-table__body"
                  />
                </table>
              </div>
            </div>
            <input
              name="PK"
              type="hidden"
              value=""
            />
            <input
              name="adminAreaCodes"
              type="hidden"
              value=""
            />
            <input
              name="mode"
              type="hidden"
              value=""
            />
            <button
              class="govuk-button mt-2"
              data-module="govuk-button"
            >
              Add
            </button>
            <a
              class="govuk-button mt-2 ml-7 govuk-button--secondary"
              href="/sysadmin/manage-organisations"
              role="button"
            >
              Cancel
            </a>
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/changelog"
              >
                Service changelog
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`ManageOrgs > should render correctly with inputs 1`] = `
<DocumentFragment>
  <div
    class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and 
        <a
          class="govuk-link"
          href="/feedback"
          id="feedback-link"
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/sysadmin/org"
            method="post"
          >
            <input
              name="csrf_token"
              type="hidden"
              value=""
            />
            <h1
              class="govuk-heading-xl"
            >
              Add new organisation
            </h1>
            <div
              class="govuk-form-group"
            >
              <div
                class="govuk-form-group"
                id="name"
              >
                <label
                  class="govuk-label govuk-label--s"
                  for="name-input"
                >
                  Organisation name
                </label>
                <div
                  class=""
                >
                  <input
                    class="govuk-input w border-3"
                    id="name-input"
                    maxlength="100"
                    name="name"
                    type="text"
                    value="test-org"
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-form-group"
            >
              <div
                class="govuk-form-group"
              >
                <label
                  class="govuk-label govuk-label--s"
                  for="adminAreaCodes-input"
                  id="adminAreaCodes-label"
                >
                  NaPTAN AdminArea
                </label>
                <div
                  class=""
                >
                  <div
                    class="text-lg text-black css-b62m3t-container"
                    id="adminAreaCodes"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-dropdown-adminAreaCodes-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      class=" css-178nxlf-control"
                    >
                      <div
                        class=" css-art2ul-ValueContainer2"
                      >
                        <div
                          class=" css-yl2wa5-placeholder"
                          id="react-select-dropdown-adminAreaCodes-placeholder"
                        >
                          Select code
                        </div>
                        <div
                          class=" css-w9q2zk-Input2"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-describedby="react-select-dropdown-adminAreaCodes-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-labelledby="adminAreaCodes-label"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id="adminAreaCodes-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" css-4xgw5l-IndicatorsContainer2"
                      >
                        <span
                          class=" css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <table
                  class="govuk-table"
                >
                  <thead
                    class="govuk-table__head"
                  >
                    <tr
                      class="govuk-table__row"
                    />
                  </thead>
                  <tbody
                    class="govuk-table__body"
                  >
                    <tr
                      class="govuk-table__row"
                    >
                      <td
                        class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                      >
                        001 - Area 1
                      </td>
                      <td
                        class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                      >
                        <button
                          class="govuk-link"
                          id="remove-stop-001"
                        >
                          Remove
                        </button>
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                    >
                      <td
                        class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                      >
                        002 - Area 2
                      </td>
                      <td
                        class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                      >
                        <button
                          class="govuk-link"
                          id="remove-stop-002"
                        >
                          Remove
                        </button>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
            <input
              name="PK"
              type="hidden"
              value=""
            />
            <input
              name="adminAreaCodes"
              type="hidden"
              value="001,002"
            />
            <input
              name="mode"
              type="hidden"
              value=""
            />
            <button
              class="govuk-button mt-2"
              data-module="govuk-button"
            >
              Add
            </button>
            <a
              class="govuk-button mt-2 ml-7 govuk-button--secondary"
              href="/sysadmin/manage-organisations"
              role="button"
            >
              Cancel
            </a>
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/changelog"
              >
                Service changelog
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
